--- a/StudentMs/Views/Student/CreateOrEdit.cshtml
+++ b/StudentMs/Views/Student/CreateOrEdit.cshtml
@@ -53,6 +53,12 @@
         <span asp-validation-for="Region" class="text-danger"></span>
     </div>
 
+    <div class="col-md-6 mb-3">
+        <select asp-for="DepartmentId" class="form-control" asp-items="@(ViewBag.DepartmentId)">
+            <option value="">Select Department</option>
+        </select>
+    </div>
+
     <div class="mb-3">
         <label asp-for="Gender" class="form-label"></label>
         <select asp-for="Gender" class="form-select">
