--- a/StudentMs/Views/Course/CreateOrEdit.cshtml
+++ b/StudentMs/Views/Course/CreateOrEdit.cshtml
@@ -36,6 +36,12 @@
         <span asp-validation-for="Semester" class="text-danger"></span>
     </div>
 
+    <div class="col-md-6 mb-3">
+        <select asp-for="DepartmentId" class="form-control" asp-items="@(ViewBag.DepartmentId)">
+            <option value="">Select Department</option>
+        </select>
+    </div>
+
     <div class="mb-3">
         <label asp-for="MaxStudents" class="form-label"></label>
         <input asp-for="MaxStudents" class="form-control" />
